<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Wprowadź tytuł sprawy:</string>
    <string name="crime_title_label">Tytuł</string>
    <string name="crime_details_label">Opis</string>
    <string name="crime_solved_label">Rozwiązana</string>
    <string name="first_item">Pierwszy</string>
    <string name="last_item">Ostatni</string>
    <string name="date_piker_title">Date of crime:</string>
    <string name="time_piker_title">Crime time:</string>
    <string name="new_crime">Nowe przestepstwo</string>
    <string name="show_subtitle">Pokaż podtytuł</string>
    <string name="hide_subtitle">Ukryj podtytuł</string>
    <string name="subtitle_format">%1$d przestępstw</string>
    <string name="remove_crime">Usuń</string>
    <string name="empty_array">Lista przestępstw jest pusta</string>
    <string name="add_criminal">Dodaj przestępstwo</string>
    <plurals name="criminalCount" >
        <item quantity="one">%1$d przestępswo</item>
        <item quantity="zero">%1$d przestępstw</item>
        <item quantity="other">%1$d przestępstwa</item>
    </plurals>

    <string name="crime_suspect_text">Wybierz podejrzanego</string>
    <string name="crime_report_text">Wyślij raport o przestępstwie</string>
    <string name="crime_report">%1s! Przestępstwo zostało ujawnione w dniu %2s. %3s, i %4s</string>
    <string name="crime_report_solved">Sprawa rozwiązana</string>
    <string name="crime_report_unsolved">Sprawa nierozwiązana</string>
    <string name="crime_report_no_suspect">Brak podejrzanego</string>
    <string name="crime_report_suspect">Podejrzany to %1s</string>
    <string name="crime_report_subject">CriminalIntent - raport o przestępstwie</string>
    <string name="sent_report">Wyłślij raport za pomocą </string>
    <string name="crime_call">Zadzwoń do podejrzanego</string>


</resources>
